# weather-backend

./: README.md  db.sqlite3  pyproject.toml
Weather/: models.py  urls.py  views.py
Weather/api/: serializers.py
Weather/migrations/: 0001_initial.py
project/: settings.py  urls.py
